<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.passwordrecover.view.PasswordRecoverActivity">
    <TextView
        android:id="@+id/tvRecoverEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        android:fontFamily="@font/oswald_font_wght"
        android:textSize="25sp"
        android:text="@string/title_recover_email"
        android:layout_marginTop="@dimen/common_margin_default"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
        
    
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRecoverEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_default"
        android:layout_margin="16dp"
        android:hint="@string/hint_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/tvRecoverEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRecoverEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRecoverEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin_default"
        android:text="@string/btn_recover_email"
        android:padding="10dp"
        app:backgroundTint="@color/blue"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tilRecoverEmail"
        app:layout_constraintStart_toStartOf="@+id/tilRecoverEmail"
        app:layout_constraintTop_toBottomOf="@+id/tilRecoverEmail" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:layout_marginTop="@dimen/common_margin_default"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/tilRecoverEmail"
        app:layout_constraintStart_toStartOf="@+id/tilRecoverEmail"
        app:layout_constraintTop_toBottomOf="@+id/tilRecoverEmail"/>

        

</androidx.constraintlayout.widget.ConstraintLayout>